--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>app</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <h1>milos updated</h1>
-  </body>
+<html lang=en>
+<head>
+    <meta http-equiv=content-type content="text/html; charset=UTF-8">
+    <title>Miloš Medić | Web Developer</title>
+    <meta name=format-detection content="telephone=no">
+    <meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1">
+    <meta name=description content="My name is Miloš Medić. I'am a web developer at ViewPoint.">
+    <meta name=keywords content="Miloš Medić,web,developer">
+    <meta name=author content="Miloš Medić">
+    <link rel=stylesheet href="index.css?v=1.3">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127964720-2"></script>
+    <script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","UA-127964720-2")</script>
+</head>
+<body>
+<input type=checkbox id=switch>
+<div class=body>
+    <div class=container>
+        <div class=row>
+            <div class=custom-header>
+                <label for=switch>
+                    <span class=light>dark</span>
+                    <span class=dark>light</span>
+                </label>
+            </div>
+            <div class=header-title-left>
+                <h2><a href=https://www.linkedin.com/in/medicmilos/ target=_blank>Miloš Medić</a></h2>
+            </div>
+            <div class=header-title-right>
+                <h2><a href=https://www.linkedin.com/in/medicmilos/ target=_blank>Miloš</a> &#9472; is a Web Developer living in Belgrade, Serbia.</h2>
+                <h2><strong>Hack things, solve problems. Be curious. </strong></h2>
+                <h2>
+                    I see myself as a kid who is both hacker and coder. One of my main skills is to a ability to quickly learn new things if needed. I never stop learning, and I always see a place for improvements. It drives everything I do.</h2>
+            </div>
+        </div>
+    </div>
+    <div class=container>
+        <div class=row>
+            <div class=hero-title>
+                <h1>Frontend <span class=outlined>Developer</span> at <a href=https://deversity.com/ target=_blank>DEVersity</a></h1>
+            </div>
+            <div class=hero-description>
+                <h2></h2>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
