--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
                 <h2><a href=https://www.linkedin.com/in/medicmilos/ target=_blank>Miloš Medić</a></h2>
             </div>
             <div class=header-title-right>
-                <h2><a href=https://www.linkedin.com/in/medicmilos/ target=_blank>Miloš</a> &#9472; is a Web Developer living in Belgrade, Serbia.</h2>
+                <h2><a href=https://www.linkedin.com/in/medicmilos/ target=_blank>Miloš</a> &#9472; is a Frontend Developer from Belgrade, Serbia.</h2>
                 <h2><strong>Hack things, solve problems. Be curious. </strong></h2>
-                <h2>
-                    I see myself as a kid who is both hacker and coder. One of my main skills is to a ability to quickly learn new things if needed. I never stop learning, and I always see a place for improvements. It drives everything I do.</h2>
+                <!-- <h2>
+                    I see myself as a kid who is both hacker and coder. One of my main skills is to a ability to quickly learn new things if needed. I never stop learning, and I always see a place for improvements. It drives everything I do.</h2> -->
             </div>
         </div>
     </div>
     <div class=container>
         <div class=row>
             <div class=hero-title>
-                <h1>Frontend <span class=outlined>Developer</span> at <a href=https://deversity.com/ target=_blank>DEVersity</a></h1>
+                <h1>Frontend <span class=outlined>Developer</span> at <a href=https://kroonstudio.com/ target=_blank>Kroon Studio</a></h1>
             </div>
             <div class=hero-description>
                 <h2></h2>
