--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class=container>
         <div class=row>
             <div class=hero-title>
-                <h1>Frontend <span class=outlined>Developer</span> at <a href=https://kroonstudio.com/ target=_blank>Kroon Studio</a></h1>
+                <h1>Software <span class=outlined>Engineer</span> at <a href=https://dynamicmockups.com/ target=_blank>Dynamic Mockups</a></h1>
             </div>
             <div class=hero-description>
                 <h2></h2>
