--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang=en>
 <head>
     <meta http-equiv=content-type content="text/html; charset=UTF-8">
-    <title>Miloš Medić | Web Developer</title>
+    <title>Miloš Medić | Software Engineer</title>
     <meta name=format-detection content="telephone=no">
     <meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,minimum-scale=1,maximum-scale=1">
-    <meta name=description content="My name is Miloš Medić. I'am a web developer at ViewPoint.">
-    <meta name=keywords content="Miloš Medić,web,developer,programmer">
+    <meta name=description content="My name is Miloš Medić. I'am a software engineer at Dynamic Mockups">
+    <meta name=keywords content="Miloš Medić,web,developer,programmer,engineer">
     <meta name=author content="Miloš Medić">
     <link rel=stylesheet href="index.css?v=1.3">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127964720-2"></script>
